# carma

./: .gitignore  LICENSE  README.md  pkgInfo.py  pyproject.toml  unittest.sh
data/scene_009_PsortO/ground_truth/: 1742756713.461177_id_67bc6c24b50c035c485bbf56.json  1742756718.3402424_id_67bc6c24b50c035c485bbf56.json  1742756719.1431835_id_67bc6c24b50c035c485bbf56.json  1742756725.8304124_id_67bc6c24b50c035c485bbf56.json  1742756727.422209_id_67bc6c24b50c035c485bbf56.json
data/scene_009_PsortO/person_actions/: 1742756696.609991_id_67bc6c24b50c035c485bbf56.pkl  1742756701.287488_id_67bc6c24b50c035c485bbf56.pkl  1742756701.6163719_id_67bc6c24b50c035c485bbf56.pkl  1742756701.885491_id_67bc6c24b50c035c485bbf56.pkl  1742756702.1330295_id_67bc6c24b50c035c485bbf56.pkl  1742756702.4097726_id_67bc6c24b50c035c485bbf56.pkl  1742756702.6689177_id_67bc6c24b50c035c485bbf56.pkl  1742756702.9712036_id_67bc6c24b50c035c485bbf56.pkl  1742756703.2115881_id_67bc6c24b50c035c485bbf56.pkl  1742756703.520231_id_67bc6c24b50c035c485bbf56.pkl  1742756703.7486718_id_67bc6c24b50c035c485bbf56.pkl  1742756704.0087037_id_67bc6c24b50c035c485bbf56.pkl  1742756704.290722_id_67bc6c24b50c035c485bbf56.pkl  1742756704.5906284_id_67bc6c24b50c035c485bbf56.pkl  1742756704.8325899_id_67bc6c24b50c035c485bbf56.pkl  1742756705.0818195_id_67bc6c24b50c035c485bbf56.pkl  1742756705.3685799_id_67bc6c24b50c035c485bbf56.pkl  1742756705.6251614_id_67bc6c24b50c035c485bbf56.pkl  1742756705.8970115_id_67bc6c24b50c035c485bbf56.pkl  1742756708.0477536_id_67bc6c24b50c035c485bbf56.pkl  1742756708.2856195_id_67bc6c24b50c035c485bbf56.pkl  1742756708.5556183_id_67bc6c24b50c035c485bbf56.pkl  1742756708.8216236_id_67bc6c24b50c035c485bbf56.pkl  1742756709.0751264_id_67bc6c24b50c035c485bbf56.pkl  1742756709.3480837_id_67bc6c24b50c035c485bbf56.pkl  1742756709.610319_id_67bc6c24b50c035c485bbf56.pkl  1742756709.8765373_id_67bc6c24b50c035c485bbf56.pkl  1742756710.149322_id_67bc6c24b50c035c485bbf56.pkl  1742756710.405972_id_67bc6c24b50c035c485bbf56.pkl  1742756710.6781309_id_67bc6c24b50c035c485bbf56.pkl  1742756710.938112_id_67bc6c24b50c035c485bbf56.pkl  1742756711.2123644_id_67bc6c24b50c035c485bbf56.pkl  1742756711.482032_id_67bc6c24b50c035c485bbf56.pkl  1742756711.7486515_id_67bc6c24b50c035c485bbf56.pkl  1742756712.0094047_id_67bc6c24b50c035c485bbf56.pkl  1742756712.289831_id_67bc6c24b50c035c485bbf56.pkl  1742756712.55594_id_67bc6c24b50c035c485bbf56.pkl  1742756712.823708_id_67bc6c24b50c035c485bbf56.pkl  1742756713.0946963_id_67bc6c24b50c035c485bbf56.pkl  1742756713.3426967_id_67bc6c24b50c035c485bbf56.pkl  (+84 more)
data/scene_021_sf2P/ground_truth/: 1742834138.8521907_id_67bed9723898acab462d190d.json  1742834147.6247122_id_67bed9723898acab462d190d.json
data/scene_022_sf2P/ground_truth/: 1742833504.0450122_id_67beda5c4fff1ffd84a8c896.json  1742833515.882244_id_67beda614fff1ffd84a8c89e.json  1742833517.2747502_id_67beda5c4fff1ffd84a8c896.json  1742833524.0477738_id_67beda614fff1ffd84a8c89e.json
data/scene_026_sf1P1R/ground_truth/: 1742840068.3748555_id_67bee19900646f514032bcae.json
data/scene_027_sf1P1R/ground_truth/: 1742840463.5080612_id_67bee1e7972d5a67f8fe4dcd.json  1742840466.3254964_id_67bee1e7972d5a67f8fe4dcd.json  1742840467.5075345_id_67bee1e7972d5a67f8fe4dcd.json  1742840475.7680242_id_67bee1e7972d5a67f8fe4dcd.json
data/scene_0290_sf2P1R/ground_truth/: 1742837874.6575623_id_67bee31dc03193b53a1da7c0.json  1742837876.6950927_id_67bee31dc03193b53a1da7c0.json
data/scene_029_sf2P1R/ground_truth/: 1742836177.9181833_id_67bee2c14bad891d4f95d55e.json  1742836180.2609315_id_67bee2c14bad891d4f95d55e.json  1742836184.7661388_id_67bee2c14bad891d4f95d55e.json
examples/: baselines_example.py  carma.py  carma_example.py  evaluate.py  evaluate_full.py  prepare_gt.py  structured_output.py
src/carma/: __init__.py
src/evaluation/: __init__.py  annotate_carma.py  evaluate_carma.py  inspect_data.py
tests/: test_carma.py  test_vlm_wrapper.py
(+111 files in other folders)
